--- a/estilos.css
+++ b/estilos.css
@@ -1,12 +1,136 @@
-*{
-    margin: 0;
-    padding: 0;
+.navbar{
+    background-color: #85d5de;
+}
+.navbar-brand{
+    color: #af74af !important;
 }
 
-body{
-    background-color: aqua;
+.nav-link{
+    color: antiquewhite !important;
 }
 
-p{
-    color: blueviolet;
+.img{
+    width: 60px;
+    height: auto;
+}
+
+.bd-placeholder-img1{
+    background-image: url(img/gps.png);
+    background-size: contain;
+    background-color:#D92B04
+}
+
+.nav-item:hover{
+    background-color: #af74af;
+    border-radius: 5px;
+}
+
+.img-svg img {
+    width: 200px;
+    align-items: center;
+  }
+
+.marketing .col-lg-4{
+    margin-top: 5%;
+    margin-bottom: 1.5rem;
+    text-align: center;
+}
+
+.btn{
+    background-color: #85d5de;
+    color: aliceblue;
+}
+
+.jumbotron{
+    background-color: black;
+    background-image: url(img/1274702.jpg);
+    background-size: cover;
+    background-position: center;
+    color: antiquewhite;
+}
+
+.jumbotron3{
+    background-color: #85d5de;
+    background-size: cover;
+    background-position: center;
+    color: antiquewhite;
+}
+
+.jumbotron5{
+    background-color: #85d5de;
+    background-size: cover;
+    background-position: center;
+    color: antiquewhite;
+}
+
+h1{
+    color: #af74af;
+}
+
+.jumbotron p{
+    color: #000;
+    text-shadow: 2px 2px 5px #000000;
+}
+
+
+
+.jumbotron .btn{
+    background-color: #af74af;
+    color: aliceblue;
+}
+
+
+.jumbotron2 p{
+    color: #000;
+    text-shadow: 2px 2px 5px #000000
+}
+
+.img1{
+    width: 150px;
+    float: right;
+}
+
+.img2{
+    width: 150px;
+    float: left;
+    margin-right: 50px;
+}
+
+
+.jumbotron4 p{
+    color: #000;
+    text-shadow: 2px 2px 5px #000000;
+}
+
+h2{
+    background-color: #af74af;
+    text-align: center;
+    color: aliceblue;
+    padding: 15px;
+    margin-top: 10%;
+    margin-bottom: 10;
+}
+
+.jumbotron6{
+    background-color: black;
+    background-image: url(img/rastro.png);
+    background-size: auto;
+    background-position: center;
+    color: antiquewhite; 
+}
+
+.p1{
+    color: #85d5de;
+    text-align: center;
+    text-shadow: 2px 2px 2px #000 ;
+}
+.iframe{
+    align-items: center;
+}
+
+.footer{
+    background-color: #000;
+    color: #85d5de;
+    text-align: center;
+   
 }
