--- a/estilos.scss
+++ b/estilos.scss
@@ -2,70 +2,203 @@ $color1: #af74af;
 $color2: #85d5de;
 $color3: antiquewhite;
 
-.navbar{
+*{
+    margin: 0;
+    padding: 0;
+  }
+  
+  html{
+    height: 100%;
+  }
+  
+  body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+  }
+  
+  .body{
+    background-image: linear-gradient(to left, #00C9A7, #845EC2);
+  }
+  
+  /*NAVBAR Area*/
+  nav{
+    text-transform:uppercase;
+    letter-spacing:0.063em;
+    font-size:0.75em;
+  }
+  
+  nav ul li a{
+    letter-spacing:2px;
+    color:#fff;
+    -webkit-transition:color .2s ease;
+    -o-transition:color .2s ease;
+    transition:color .2s ease;
+    padding:3px 0;
+    margin-bottom:10px;
+    position:relative;
+    display:inline-block;
+  }
+  
+  .navbar ul li a:hover{
+    color:#7310d6;
+  }
+  
+  .navbar ul li a:hover::after, .navbar ul li a:hover::before{
+    width:100%;
+    left:0;
+  }
+  .navbar ul li a::after, .navbar ul li a::before{
+    content:'';
+    position:absolute;
+    top:calc(100% + 5px);
+    width:0;
+    right:0;
+    height:3px;
+  }
+  
+  .navbar ul li a::before{
+    -webkit-transition:width .25s cubic-bezier(0.51, 0.18, 0, 0.88) .1s;
+    -o-transition:width .25s cubic-bezier(0.51, 0.18, 0, 0.88) .1s;
+    transition:width .25s cubic-bezier(0.51, 0.18, 0, 0.88) .1s;
+    background:#845EC2;
+  }
+  
+  .navbar ul li a::after{
+    -webkit-transition:width .2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
+    -o-transition:width .2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
+    transition:width .2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
+    background:#2FFFAD;
+  }
+  
+  .navbar ul li a.active:after{
+    background:#2FFFAD;
+    width:100%;
+    left:0;
+  }
+  .navbar ul li a.active:before{
+    z-index:2;
+  }
+  
+  .navbar {
     background-color: #85d5de;
-    background-image: linear-gradient(to right, #85d5de, #af74af);
-}
-.navbar-brand{
-    color: $color1 !important;
-   
-}
-
-.nav-link{
-    color: $color3 !important;
-}
-
-.img{
-    width: 60px;
+    background-image: linear-gradient(to left, #00C9A7, #845EC2);
+  }
+  
+  
+  .nav-link {
+    color: antiquewhite !important;
+  }
+  
+  
+  .img {
+    width: 70px;
     height: auto;
-}
-
-.bd-placeholder-img1{
+  }
+  
+  .jumbotronIndex{
+    margin-top: 20PX;
+    background-image: url(img/g3.jpg);
+    background-size: cover;
+    background-position: center;
+    box-shadow: 5px 5px 20px rgba(255, 255, 255, 0.9);
+    border-radius: 6px;
+  }
+  
+  /*Animación Titulo HOME*/
+  .tituloindex{
+    animation-duration: 2s;
+    animation-name: slidein;
+  }
+  
+  .tituloindex2{
+    animation-duration: 3s;
+    animation-name: slidein;
+  }
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
+  
+  .tituloindex{
+    margin-top: 5%;
+    text-align: center;
+    text-shadow: 5px 5px 10px 01.5 #000000;
+    color: antiquewhite;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    box-sizing: border-box;
+    letter-spacing: 2px;
+    line-height: 3rem;
+    text-transform: uppercase;
+  }
+  
+  .tituloindex2{
+    text-align: center;
+    text-shadow: 2px 2px 5px #333333;
+    color: antiquewhite;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    box-sizing: border-box;
+    letter-spacing: 2px;
+    line-height: 3rem;
+    text-transform: uppercase;
+  }
+  
+  .bd-placeholder-img1 {
     background-image: url(img/gps.png);
     background-size: contain;
-    background-color:#D92B04
-}
-
-.nav-item:hover{
-    background-color: #af74af;
-    background-image: linear-gradient(#af74af, rgb(58, 8, 73));
-    border-radius: 5px;
-}
-
-.img-svg img {
+   
+  }
+  
+  .carousel-inner img {
+    width: 100%;
+    height: auto;
+    text-decoration-color: #000000;
+  }
+  
+  .carousel-inner{
+    height: auto;
+    }
+  
+  .img-svg img {
     width: 200px;
     align-items: center;
   }
-
-.card{
-    
+  
+  .card {
     align-items: center;
     margin-right: 8%;
     border-radius: 6px;
     overflow: hidden;
     background-color: #fff;
-    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
     cursor: default;
     transition: all 400ms ease;
-}
-
-.card:hover{
-    box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+  }
+  
+  .card:hover {
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
     transform: translateY(-5%);
-}
-
-.marketing .col-lg-3{
+  }
+  
+  .marketing .col-lg-3 {
     margin-top: 10%;
     margin-bottom: 3rem;
     text-align: center;
-}
-
-.btn{
+  }
+  
+  .btn {
     background-color: #85d5de;
     color: aliceblue;
-}
-
-.jumbotron{
+  }
+  
+  .jumbotron {
     background-color: black;
     background-image: url(img/1274702.jpg);
     background-size: cover;
@@ -73,17 +206,17 @@ $color3: antiquewhite;
     color: antiquewhite;
     margin-top: 10%;
     margin-bottom: 10%;
-}
-
-.jumbotron2{
+  }
+  
+  .jumbotron2 {
     border-radius: 10px;
     overflow: hidden;
     width: fit-content;
     height: 50%;
     margin-bottom: 5%;
-}
-
-.jumbotron3{
+  }
+  
+  .jumbotron3 {
     border-radius: 10px;
     overflow: hidden;
     width: fit-content;
@@ -93,17 +226,17 @@ $color3: antiquewhite;
     background-size: cover;
     background-position: center;
     color: antiquewhite;
-}
-
-.jumbotron4{
+  }
+  
+  .jumbotron4 {
     border-radius: 10px;
     overflow: hidden;
     width: fit-content;
     height: 50%;
     margin-bottom: 5%;
-}
-
-.jumbotron5{
+  }
+  
+  .jumbotron5 {
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 5%;
@@ -111,85 +244,231 @@ $color3: antiquewhite;
     background-size: cover;
     background-position: center;
     color: antiquewhite;
-}
-
-h1{
+  }
+  
+  /*H Area*/
+  h1 {
     color: #af74af;
     text-shadow: 2px 2px 5px #6b6969;
-}
-
-.jumbotron p{
-    color: #000;
-    text-shadow: 2px 2px 5px #000000;
-}
-
-
-
-.jumbotron .btn{
-    background-color: #af74af;
-    color: aliceblue;
-}
-
-
-.jumbotron2 p{
-    color: #000;
-    text-shadow: 2px 2px 5px #000000
-}
-
-.img1{
-    width: 150px;
-    float: right;
-    
-}
-
-.img2{
-    width: 150px;
-    float: left;
-    margin-right: 50px;
-}
-
-
-.jumbotron4 p{
-    color: #000;
-    text-shadow: 2px 2px 5px #000000;
-   align-items: baseline;
-}
-
-
-h2{
+  }
+  
+  h2 {
     background-color: #af74af;
     background-image: linear-gradient(to left, #85d5de, #af74af);
     text-align: center;
     color: aliceblue;
+    border-radius: 5px;
     padding: 15px;
     margin-top: 10%;
-   
     margin-left: 8%;
     margin-right: 8%;
-}
-
-.jumbotron6{
-    
-    
-    background-image: linear-gradient(to right bottom, #a4b6b8a9, #d0edf0bb ), url(img/rastro.png);;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
   
+  h3 {
+    background-color: #af74af;
+    text-align: center;
+    color: aliceblue;
+    border-radius: 10px;
+    padding: 15px;
+    margin-top: 10%;
+    margin-left: 8%;
+    margin-right: 8%;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+  }
+  /*Fin H area*/
+  
+  .jumbotron p {
+    color: #000;
+    text-shadow: 2px 2px 5px #000000;
+  }
+  
+  .jumbotron .btn {
+    background-color: #af74af;
+    color: aliceblue;
+  }
+  
+  .jumbotron2 p {
+    color: #000;
+    text-shadow: 2px 2px 5px #000000;
+  }
+  
+  .img1 {
+    width: 150px;
+    float: right;
+  }
+  
+  .img2 {
+    width: 150px;
+    float: left;
+    margin-right: 50px;
+  }
+  
+  .jumbotron4 p {
+    color: #000;
+    text-shadow: 2px 2px 5px #000000;
+    align-items: baseline;
+  }
+  
+  .jumbotron6 {
+    background-image: linear-gradient(to right bottom, rgba(164, 182, 184, 0.662745098), rgba(208, 237, 240, 0.7333333333)), url(img/rastro.png);
     background-size: auto;
     background-position: center;
-    color: antiquewhite; 
-}
-
-.p1{
+    color: antiquewhite;
+  }
+  
+  .p1 {
     color: #ffffff;
     text-align: center;
-    text-shadow: 2px 2px 2px #000 ;
-}
-.iframe{
+    text-shadow: 2px 2px 2px #000;
+  }
+  
+  .btn{
+    margin-top: 20px;
+  }
+  
+  .iframe {
     align-items: center;
-}
-
-.footer{
-    background-color: #2c2c2c;
-    color: #85d5de;
-    text-align: center;
+  }
+  
+  
+  .container-footer{
+    margin-top: auto;
+  }
+  
+  
+  
+  /*Galeria*/
+  .galeria{
    
-}
+    width: 100%;
+    background-color: #ffffff;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(8, 200px);
+    grid-gap: 15px;
+  }
+  
+  .item{
+    background-size: cover;
+    background-position: center;
+    margin-top: 50px;
+    border: 4px solid #000;
+    transition: all 0.9s;
+    box-shadow: 0 0 5px 0px #000;
+  }
+  
+  .item:hover{
+    filter: blur(0%);
+    transform: scale(1.5);
+  }
+  
+  .item1{
+    background-image: url(img/g1.jpg);
+  }
+  
+  .item2{
+    background-image: url(img/g2.jpg);
+  }
+  
+  .item3{
+    background-image: url(img/g3.jpg);
+  }
+  
+  .item4{
+    background-image: url(img/g4.jpg);
+  }
+  
+  .item5{
+    background-image: url(img/g5.jpg);
+  }
+  
+  .item5{
+    background-image: url(img/g6.jpg);
+  }
+  
+  .item6{
+    background-image: url(img/g7.jpg);
+  }
+  
+  .item7{
+    background-image: url(img/g8.jpg);
+  }
+  
+  .item8{
+    background-image: url(img/g9.jpg);
+  }
+  
+  
+  /*FOOTER*/
+  .footer{
+    overflow: hidden;
+    background-color: #fff;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.9);
+  
+  }
+  
+  .container-footer{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  
+  
+  /*MEDIA QUERYS*/ 
+  
+  @media only screen and (min-width:480px){
+    .galeria{
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(4, 200px);
+    }
+  }
+  
+  @media only screen and (min-width:768px) and (max-width:1023px){
+    .galeria{
+        grid-template-columns: repeat(3, 1fr);
+    }
+  
+    .item1{
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+    .item2{
+        grid-column: 3/4;
+        grid-row: 1/2;
+    }
+    .item3{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .item4{
+        grid-column: 2/4;
+        grid-row: 2/3;
+    }
+    .item5{
+        grid-column: 1/3;
+        grid-row: 3/4;
+    }
+    .item6{
+        grid-column:3/4 ;
+        grid-row: 3/4;
+    }
+    .item7{
+        grid-column: 1/2;
+        grid-row: 4/5;
+    }
+    .item8{
+        grid-column: 2/4;
+        grid-row: 4/5;
+    }
+  }
+  
+  @media only screen and (min-width:1024px){
+    .galeria{
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2,200px);
+    }
+  }
+  
+  
+  
+  
